[gd_scene load_steps=5 format=3 uid="uid://g3e0eodhl7xl"]

[ext_resource type="Script" uid="uid://d2xidwp1fu6bj" path="res://menus/menu.gd" id="1_uyh0y"]
[ext_resource type="PackedScene" uid="uid://dns4isn3f1jrr" path="res://menus/settings_menu.tscn" id="2_y8e4h"]

[sub_resource type="LabelSettings" id="LabelSettings_mv1id"]
font_size = 64
font_color = Color(0.615686, 1, 0.717647, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0.956863, 0, 0.431373)

[sub_resource type="LabelSettings" id="LabelSettings_s5kro"]
font_size = 32
outline_size = 2
outline_color = Color(0, 1, 0, 1)
shadow_color = Color(0, 1, 0, 1)
shadow_offset = Vector2(-1, -1)

[node name="Menu" type="CanvasLayer"]
process_mode = 3
editor_description = "Menu scene for \"Game\" and \"StartMenu\" scenes"
script = ExtResource("1_uyh0y")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.364706)

[node name="Title" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Tree Simulator"
label_settings = SubResource("LabelSettings_mv1id")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PausedLabel" type="Label" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_top = 112.0
offset_bottom = 230.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_s5kro")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -68.0
offset_right = 189.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Play"

[node name="ResumeButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Settings"

[node name="BackButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Back"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("2_y8e4h")]
visible = false

[connection signal="pressed" from="ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
